[B]v0.3.3 (12-06-2014):[/B]
-Fix arenavision / arenavision schedule
-Fix Rojadirecta parser
-Added world cup 2014 category to wiziwig parser

[B]v0.3.2 (6-06-2014):[/B]
-Fix load_local_torrents for windows (tks azirus)

[B]v0.3.1 (5-06-2014):[/B]
-Added support for local .torrent files (+menu entry)

[B]v0.3.0 (1-06-2014):[/B]
-Fix issue with strings missing on devices not eligible to change acestreamengine settings from addon gui.

[B]v0.2.9 (21-05-2014):[/B]
-Added openelec i386/i686 package
-Small fixes
-Different dialogprogress for sopcast

[B]v0.2.8 (20-05-2014):[/B]
-Added xbian armv7 package (thanks to xbian devs)
-Added openelec armv7 package
-Acestream settings are now separated from the engine (txt files), openssl was also updated. This applies to the raspberry pi, mac osx and linux armv7. If you run the addon in one of those platforms, please re-do the configuration.
-It's now possible to change the engine settings from the advanced functions menu for the platforms listed above (re-do the configuration to get the new engine)
-Fixed wiziwig parser
-Fixed error in linux armv7 config
-Fixed configuration on android (apk download refused by google code)
-Fixed xbian detection (thanks xbian devs)

[B]v0.2.7 (3-05-2014):[/B]
-Fixed issue with configuration of sopcast on windows

[B]v0.2.6 (29-04-2014):[/B]
-Added support for Mac i386 (thanks crackerj0e)
-Fixed issues with srvany download
-Wiki updated

[B]v0.2.5 (25-04-2014):[/B]
-Added pipplware portuguese rpi distribution to config list
-Small fix for users in windows
-New icon torrent-tv
-Simplified process for mac osx x86_64

[B]v0.2.4 (22-04-2014):[/B]
-Fix autoconfiguration android

[B]v0.2.3 (22-04-2014):[/B]
-Sopcast now works for android (using xbmc player without root)
-Fix livefootball.ws (ddos protection)
-Fix sopcast ucoz parser
-Fix livestreams code
-Added timezones (defined to london by default)
-New icon for aces (thanks marquerite)

[B]v0.2.2 (9-04-2014):[/B]